// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateBar should render correctly with a children 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #151a2d;
  font-weight: 500;
}

.emotion-4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-4.emotion-4 {
  margin-left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <strong>
        : 
      </strong>
      <span
        class="emotion-1 emotion-4"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
=======
      class="emotion-5"
      role="progressbar"
    >
      <div
        class="emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
>>>>>>> refactor: use colors from theme from n to p (#168)
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 90 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #151a2d;
  font-weight: 500;
}

.emotion-4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-4.emotion-4 {
  margin-left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 89%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <strong>
        : 
      </strong>
      <span
        class="emotion-1 emotion-4"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="89"
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
=======
      class="emotion-5"
      role="progressbar"
    >
      <div
        class="emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
>>>>>>> refactor: use colors from theme from n to p (#168)
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value >= 90 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #151a2d;
  font-weight: 500;
}

.emotion-4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-4.emotion-4 {
  margin-left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ef5774;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 90%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <strong>
        : 
      </strong>
      <span
        class="emotion-1 emotion-4"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
=======
      class="emotion-5"
      role="progressbar"
    >
      <div
        class="emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
>>>>>>> refactor: use colors from theme from n to p (#168)
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with default props 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #151a2d;
  font-weight: 500;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-4 {
=======
.emotion-3 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-4 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-5 {
=======
.emotion-4 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-5 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <strong />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-3 emotion-4"
      role="progressbar"
    >
      <div
        class="emotion-5 emotion-6"
=======
      class="emotion-3"
      role="progressbar"
    >
      <div
        class="emotion-4"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-3 emotion-4"
      role="progressbar"
    >
      <div
        class="emotion-5 emotion-6"
>>>>>>> refactor: use colors from theme from n to p (#168)
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with unlimited value 1`] = `
<DocumentFragment>
  .emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #151a2d;
  font-weight: 500;
}

.emotion-4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-4.emotion-4 {
  margin-left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-6 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-6 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: use colors from theme from n to p (#168)
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #45d6b5;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <strong>
        : 
      </strong>
      <span
        class="emotion-1 emotion-4"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
=======
      class="emotion-5"
      role="progressbar"
    >
      <div
        class="emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
      class="emotion-5 emotion-6"
      role="progressbar"
    >
      <div
        class="emotion-7 emotion-8"
>>>>>>> refactor: use colors from theme from n to p (#168)
      />
    </div>
  </div>
</DocumentFragment>
`;
